# spreadsheetconverter

./: .gitignore  README.rst  pyproject.toml  requirements.txt
.github/workflows/: unittest.yml
src/spreadsheetconverter/: config.py
tests/: test_convert.py
